@@ -16,6 +16,7 @@ New:     LP: #579322 - Choosing a font in editor
          not saved on application exit.
 Fix:     LP: #519828 - Start-up dialog should not be minimised
 Fix:     LP: #579317 - Modify the 'Help' dialog to point to actual tutorial
+Fix:     LP: #579318 - Stepping through code doesn't honor breakpoints
 Fix:     LP: #579319 - Help -> about = crash
 Fix:     LP: #579320 - CMP flags not working like SUB with signed numbers
 Fix:     LP: #519834 - Assembler Error: No line highlighting
