@@ -5,7 +5,9 @@
 	windows directory. Fixes compiler warning on non-windows build.
 	* installer.nsi.in: Show 'Run Program' checkbox in installer finish
 	screen only when GTK+ installer is not embedded. This avoids an error
-	being shown about dll loading. 
+	being shown about dll loading.
+	* src/bridge.c: Do not ignore breakpoints when stepping through code.
+	Patch by Ramanathan. Fixes bug LP: #579318.
 
 2010-09-24  Aanjhan Ranganathan  <aanjhan@tuxmaniac.com>
 
